k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: argocd
  name: argocd
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: argocd
    weight: 100
